--- a/composer.json
+++ b/composer.json
@@ -8,15 +8,16 @@
         "php": "^8.1",
         "barryvdh/laravel-dompdf": "^3.0",
         "dompdf/dompdf": "^3.0",
+        "fpdf/fpdf": "^1.86",
         "guzzlehttp/guzzle": "^7.2",
+        "intervention/image": "^3.9",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.5",
         "setasign/fpdf": "^1.8",
         "setasign/fpdi": "^2.6",
-        "setasign/fpdi-fpdf": "^2.3",
-        "tecnickcom/tcpdf": "^6.7"
+        "setasign/fpdi-fpdf": "^2.3"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.1",
