--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "private": true,
+    "type": "module",
     "scripts": {
         "dev": "vite",
         "build": "vite build"
@@ -12,15 +13,18 @@
         "autoprefixer": "^10.4.2",
         "axios": "^1.1.2",
         "bootstrap": "^5.2.3",
-        "laravel-vite-plugin": "^0.7.2",
+        "esbuild": "^0.24.0",
+        "laravel-vite-plugin": "^0.7.8",
         "postcss": "^8.4.31",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "sass": "^1.56.1",
         "tailwindcss": "^3.1.0",
-        "vite": "^4.0.0"
+        "vite": "^4.5.5"
     },
     "dependencies": {
-        "pdfjs-dist": "^4.8.69"
+        "pdf-lib": "^1.17.1",
+        "pdfjs-dist": "^4.8.69",
+        "vue": "^3.5.12"
     }
 }
