--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "vite": "^4.5.5"
     },
     "dependencies": {
+        "@pdf-lib/fontkit": "^1.1.1",
         "fontkit": "^2.0.4",
         "pdf-lib": "^1.17.1",
         "pdfjs-dist": "^4.8.69",
