--- a/.env.example
+++ b/.env.example
@@ -56,3 +56,7 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+# Google Cloud Translation API
+GOOGLE_TRANSLATE_API_KEY=
+GOOGLE_TRANSLATE_PROJECT_ID=upheld-setting-463923-b1
