--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@pdf-lib/fontkit": "^1.1.1",
         "fontkit": "^2.0.4",
         "pdf-lib": "^1.17.1",
+        "pdf-parse": "^2.4.5",
         "pdfjs-dist": "^4.8.69",
         "restructure": "^3.0.2",
         "vue": "^3.5.12"
